implementando fluxo de cancelamento e esterno, ajustes das class para uma melhor leitura
